# my-streamdeck-drivers

./: .gitignore  README.md  VISION.md  deckd.toml.example  pyproject.toml
deckd/: __init__.py  __main__.py  config.py  deck_runtime.py  http_server.py  netutil.py  onair_client.py  systemd_unit.py
deckd/buttons/: __init__.py  base.py  onair.py  p2pool.py
images/: README.md  images.psd
install/: 50-deckd-p2pool.rules  deckd.service
install/polkit/: 99-deckd-p2pool.rules  deckd-p2pool.pkla
install/systemd/: deckd.service
install/udev/: 99-streamdeck.rules
memory-bank/: productContext.md  systemPatterns.md  techContext.md
memory-bank/active/: .preflight-status  .qa-validation-status  activeContext.md  progress.md  projectbrief.md  tasks.md
memory-bank/active/reflection/: reflection-deckd-initial.md  reflection-deckd-rework-pr1.md
memory-bank/archive/enhancements/: 20260418-deckd-rework-pr1.md
memory-bank/archive/features/: 20260418-deckd.md
tests/: test_config.py  test_http_server.py  test_onair_button.py  test_onair_client.py  test_p2pool_button.py  test_p2pool_press_kind.py  test_systemd_unit.py
